...
    const val EDITOR_ROTATE_PAGE_ACTION = "editor_rotate_page_action"
    const val EDITOR_DELETE_PAGE_ACTION = "editor_delete_page_action"
    const val EDITOR_DELETE_PAGE_DIALOG = "editor_delete_page_dialog"
    const val EDITOR_DELETE_PAGE_CONFIRM_ACTION = "editor_delete_page_confirm_action"
    const val EDITOR_DELETE_PAGE_DISMISS_ACTION = "editor_delete_page_dismiss_action"
    const val METADATA_EXPORT_ACTION = "metadata_export_action"
    const val METADATA_CONTINUE_ACTION = METADATA_EXPORT_ACTION
    const val METADATA_GRADE_FIELD = "metadata_grade_field"
    const val METADATA_SUBJECT_FIELD = "metadata_subject_field"
    const val METADATA_YEAR_FIELD = "metadata_year_field"
    const val METADATA_PAPER_TYPE_FIELD = "metadata_paper_type_field"
    const val METADATA_PAPER_NUMBER_FIELD = "metadata_paper_number_field"
    const val METADATA_SOURCE_FIELD = "metadata_source_field"
    const val METADATA_NOTES_FIELD = "metadata_notes_field"
    const val METADATA_FILENAME_PREVIEW = "metadata_filename_preview"
    const val METADATA_VALIDATION_ERRORS = "metadata_validation_errors"
    const val METADATA_ERROR_MESSAGE = "metadata_error_message"
    const val EXPORT_LIBRARY_ACTION = "export_library_action"
    const val EXPORT_PDF_ACTION = "export_pdf_action"
    const val EXPORT_OPEN_ACTION = "export_open_action"
    const val EXPORT_SHARE_ACTION = "export_share_action"
    const val EXPORT_SUMMARY = "export_summary"
    const val EXPORT_FILENAME = "export_filename"
    const val EXPORT_ERROR_MESSAGE = "export_error_message"
    const val LIBRARY_SCANNER_ACTION = "library_scanner_action"
    const val LIBRARY_IMPORT_ACTION = "library_import_action"
    const val LIBRARY_SEARCH_FIELD = "library_search_field"
    const val LIBRARY_CLEAR_SEARCH_ACTION = "library_clear_search_action"
    const val LIBRARY_DOCUMENT_LIST = "library_document_list"
...
    const val DOCUMENT_EDITOR_SEARCH_SUMMARY = "document_editor_search_summary"
    const val DOCUMENT_EDITOR_UNSAVED_DIALOG = "document_editor_unsaved_dialog"
    const val DOCUMENT_EDITOR_DISCARD_CHANGES_ACTION = "document_editor_discard_changes_action"
    const val DOCUMENT_EDITOR_KEEP_EDITING_ACTION = "document_editor_keep_editing_action"
    const val PDF_PAGE_EDITOR_SCREEN = "pdf_page_editor_screen"
    const val PDF_PAGE_EDITOR_PAGE_LIST = "pdf_page_editor_page_list"
    const val PDF_PAGE_EDITOR_SAVE_ACTION = "pdf_page_editor_save_action"
    const val PDF_PAGE_EDITOR_MOVE_PAGE_UP_ACTION = "pdf_page_editor_move_page_up_action"
    const val PDF_PAGE_EDITOR_MOVE_PAGE_DOWN_ACTION = "pdf_page_editor_move_page_down_action"
    const val PDF_PAGE_EDITOR_ROTATE_PAGE_ACTION = "pdf_page_editor_rotate_page_action"
    const val PDF_PAGE_EDITOR_DELETE_PAGE_ACTION = "pdf_page_editor_delete_page_action"
    const val PDF_PAGE_EDITOR_DELETE_PAGE_DIALOG = "pdf_page_editor_delete_page_dialog"
    const val PDF_PAGE_EDITOR_DELETE_PAGE_CONFIRM_ACTION = "pdf_page_editor_delete_page_confirm_action"
    const val PDF_PAGE_EDITOR_DELETE_PAGE_DISMISS_ACTION = "pdf_page_editor_delete_page_dismiss_action"
    const val CONVERTER_INPUT_LIST = "converter_input_list"
    const val CONVERTER_INPUT_OPTION = "converter_input_option"
    const val CONVERTER_OUTPUT_OPTION = "converter_output_option"
    const val CONVERTER_OUTPUT_NAME_FIELD = "converter_output_name_field"
    const val CONVERTER_SHEET_OPTION = "converter_sheet_option"
...
    const val SETTINGS_READER_THEME_DARK_ACTION = "settings_reader_theme_dark_action"
    const val SETTINGS_PDF_QUALITY_HIGH_ACTION = "settings_pdf_quality_high_action"
    const val SETTINGS_PDF_QUALITY_MEDIUM_ACTION = "settings_pdf_quality_medium_action"
    const val SETTINGS_REFRESH_STORAGE_ACTION = "settings_refresh_storage_action"
    const val SETTINGS_CLEAR_CACHE_ACTION = "settings_clear_cache_action"

    const val LOADING_CONTENT = "loading_content"
    const val ERROR_CONTENT = "error_content"
    const val EMPTY_CONTENT = "empty_content"
}

